Fix #1543 Windows high contrast mode overrides UI colors Auto-select contrast theme if high contrast mode is detected Increase scrollbar width on mobile

--- a/css/setup.css
+++ b/css/setup.css
@@ -55,11 +55,11 @@
 		scrollbar-width: none;
 	}
 	body.is_mobile .mobile_scrollbar {
-		scrollbar-width: thin;
+		scrollbar-width: initial;
 	}
 	body.is_mobile .mobile_scrollbar::-webkit-scrollbar {
-		width: 12px;
-		height: 12px;
+		width: 20px;
+		height: 20px;
 	}
 	/*Assistant Font*/
 	@font-face {
@@ -353,6 +353,7 @@
 		outline-color: var(--color-accent);
 		background-color: var(--color-dark);
 		image-rendering: pixelated;
+		forced-color-adjust: none;
 	}
 	div {
 		cursor: default;
